fix products layout scaling alignment

--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -1,4 +1,5 @@
 main.all-listings {
+
   // Featured Section
   section.featured {
     padding: 1em 1em 0px 1em;
@@ -47,12 +48,20 @@ main.all-listings {
     padding: 1em;
     border: 2px solid black;
     height: auto;
-    max-width: 50vw;
+    max-width: 75%;
+    min-width: 300px;
     margin: 0 auto;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
     margin-bottom: 1em;
+
+    div.listing-contents {
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+    }
 
     img.listing-img {
       max-height: 100%;
@@ -79,20 +88,29 @@ main.all-listings {
   }
 
   .price {
+    font-weight: bold;
     color: #41ac6c !important;
   }
 
   @media (min-width: 720px) {
+
     // All listings
     article.listing {
       flex-direction: row;
-      height: 300px;
+      min-height: auto;
+
+      div.listing-contents {
+        display: flex;
+        flex-direction: row;
+        align-items: left;
+      }
 
       img.listing-img {
         max-height: 100%;
         max-width: 100%;
         align-self: left;
       }
+
       div.listing-details {
         padding: 0 0 0 1em;
       }
